Comments to the survey intro section

--- a/survey/surveyintro.tex
+++ b/survey/surveyintro.tex
@@ -6,12 +6,20 @@ However, due to various factors, the survey and collection of results was delaye
 
 %Filipe's Comment: <em vez de tentar justificar porque é que a survey apareceu tarde, explicaria apenas que os resultados não chegaram a tempo de informar todas as decisões de design e implementação>
 
+\todo{fcorreia: sim, isto parece-me melhor vir mais tarde (ou não vir, ver o comentário no latex aqui)}
+
+
 \section{Purpose and Target}
 Even though the survey was delayed, the answers given are still important in the end. The main purpose of this survey, as stated in \ref{sec:survey-approach}, was to give a response to the question we are focusing on: \textbf{"What supply chain issues and requirements do the experts really find the most important?"}. 
+
+\todo{fcorreia: aqui, ou algures, precisas de explicar que o objetivo era que a tua abordagem fosse guiada por necessidades da prática atual no domínio das SCs. Reconheceu-se que o importante seria obter esse conhecimento a partir de peritos da área. Mostrando-se impossível ter acesso direto a essas pessoaos, a forma arranjada para obter esse conhecimento foi usando um survey}
 
 This is done by dividing the survey into groups of questions: some about the issues of supply chain, some about the points of improvement as well as the opinions applicability of Blockchain as a system for supply chain management. Together, these allow for an opinion to be formed about the quantitative measurements of the importance of each issue, as well as a qualitative collection of requirements.
 
 The survey is aimed at people with knowledge in the area of Supply Chains, and optionally Blockchain. The combination of knowledge in both areas is relevant for the questions that focus Blockchain applicability. However, having low knowledge about Blockchain is also relevant, so that the bias towards this architecture is reduced. %The Blockchain knowledge in this study was also part of the questions inquired, and has an approximately normal distribution, which means the sample
+
+\todo{fcorreia: sobre a ultima frase: sim e não. ter conhecimento de BC não quer dizer que se seja fanboy :-) pode simplesmente tanto querer dizer que se está bem informado como querer dizer que se está mal informado...}
+
 
 \section{Methodology}
 This section describes how the data was collected and analyzed. It gives a brief overview of what questions were asked, how they were grouped, the objectives of each question, along with the type of answers used.
@@ -26,8 +34,10 @@ The data for the survey was collected by sharing the survey with professionals o
 The collected sample size was 25. Even though these are answers from knowledgeable people, the sample size is not very significant, so the margin of error for this study is higher than if it were otherwise. 
 
 
-The questions of they survey can be roughly grouped into four main groups of questions. Each of the groups has similar questions, with a distinct purpose.
+The questions of the survey can be roughly grouped into four main groups of questions. Each of the groups has similar questions, with a distinct purpose.
   
+\todo{na enumeração em baixo, eu evitaria a palavra "group". em investigação empírica (que por vezes usa surveys) a  palavra group é muito frequentemente usada para se referir a grupos de pessoas. Aqui, e vez de "Statistical group 1 (4 questions) - General Information", por exemplo, eu escreveria apenas "General Information (4 questions)"}.
+
 \begin{enumerate}
 
 %TODO: maybe it is 5 questions after all?
@@ -35,6 +45,7 @@ The questions of they survey can be roughly grouped into four main groups of que
 	\begin{itemize}
 	\item \textbf{Questions} - Information about the respondent's contact with supply chain, role in the industry, years of experience and number of employees in the current company (if in a job related to supply chain).
     \item \textbf{Conclusions Expected} - Characterization of the respondent's, especially in order to validate the relevance of their profiles.
+    \todo{fcorreia: estes "conclusions expected" são mais "goals", certo?}
 	\end{itemize}
     
 \item \textbf{Statistical group 2 (4 questions) - Blockchain Knowledge and Opinions}
@@ -74,7 +85,13 @@ The questions of they survey can be roughly grouped into four main groups of que
  
 The analysis of the answers is done through bar graphics (some with frequency polygon), and using mostly the \textbf{measures of central tendency or location},  \textbf{measures of central spread, scale or dispersion} and \textbf{measures of skewness and kurtosis}. The metrics used to analyze the data set and reach some conclusions, as well as the way they are interpreted in this study are detailed in table \ref{metrics-table}.
 
+\todo{fcorreia: queres dizer graphs em vez de graphics}
 
+\todo{fcorreia: "Table 6.1" ("t" maiusculo)}
+
+
+\todo{fcorreia: acho vale a pena explicares estes conceitos da estatística. podes dizer que vais calcular estes valores para a tua análise e podes simplesmente usar os conceitos assumindo que toda a gente sabe o que significam. se tiveres boas referências, fica sempre bem adicionar algumas. o verdadeiramente importante são as conclusões que vais tirar com base nestes valores, e aí pode valer a pena dar a entender mais algum conceito estatístico que seja importante para se perceber o raciocinio, mas sempre sem entrar neste tipo de detalhe.
+}
 %% PUT THESE INTO A TABLE AND EXPLAIN A LITTLE BETTER WHICH ONES ARE USED, WHEN AND WHY
 
 % TODO: change table caption
