Comments to the survey chapter (to be concluded)

--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -20,6 +20,7 @@
 \label{fig:blockchain_crypto_opinions}
 \end{figure}
 
+\todo{fcorreia: a legenda da figura está a ser cortada}
 
 %GRAFICOS DE CADA 1 DAS 3 AFIRMAÇÕES DE CRYPTOCURRENCIES
 \textbf{Affirmations: }
@@ -28,6 +29,11 @@
 \item Cryptocurrencies are useful in blockchains open to the public, in order to create incentives for good behavior, but not always necessary in private chains.
 \item Blockchains can be useful in some uses cases, independently of whether they hold a cryptocurrency or not.
 \end{enumerate}
+
+
+\todo{fcorreia: eu tiraria os prefixos "Affirmation 123" e deixava diretamente a pergunta em cada celula. acho que basta para se perceber. no caption podes clarificar que a tabela se refere às perguntas na categoria "Blockchain Knowledge and Opinions"}
+
+\todo{fcorreia: está um pouco grande esta tabela. dá para reduzir ao tamanho de letra dos titulos das colunas e das perguntas?}
 
 %%%%%% TABLE START %%%%%%%%%%%%%%
 % Please add the following required packages to your document preamble:
