--- a/survey/survey1.tex
+++ b/survey/survey1.tex
@@ -4,7 +4,11 @@
 %TODO: mencionar que vai estar nos anexos o inquerito completo? (se der para la por)
 
 
-The results of they survey are analyzed in this chapter. Each group features the graphics and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
+The results of the survey are analyzed in this chapter. Each group features the graphics and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
+
+\todo{fcorreia: devido ao que já disse antes, sempre que usares a palavra "group" o mais seguro será dizeres "group of questions"}
+
+\todo{fcorreia: graphics -> graphs}
 
 \subsection{Group 1 - General Information and Participant Classification}
 
@@ -39,6 +43,11 @@ The results of they survey are analyzed in this chapter. Each group features the
 Data from the participants was inquired, including: role, industry, years of experience and company size (if  they worked in one at all).
 
 The data, as can be seen in figure \ref{fig:group1_graphics}, can be summarized in the following statements:
+
+\todo{fcorreia: "Figure 6.1" (capital F)}
+
+\todo{fcorreia: mais do que descrever textualmente os gráficos, o importante é tirares deles conclusões. tens as duas coisas, o que está bem, mas eu tentaria manter as descrições textuais ao mínimo, para dar um pouco mais de ênfase às conclusões (último parágrafo da secção.}
+
 \begin{itemize}
 \item Most people, about \textbf{68\% of the respondents, have an active role working in areas related to supply chain}. From these, 56\% work in a company directly involved in the processes of supply, manufacturing, logistics, retail or transports and 12\% work in consulting related to these areas. The rest are people with a profile that gives them knowledge about supply chain, be it through education or other type of contact with the field.
 \item \textbf{ most common area of supply chain to work in is, by far, Transport and Logistics}, with 52\% of the respondents saying they have work experience in this field. \textbf{Health and Retail} are also common areas, with 20\% and 16\% respectively.
