Survey group 1 2 and 3 finished
Survey group 1 2 and 3 finished

--- a/survey/survey1.tex
+++ b/survey/survey1.tex
@@ -46,4 +46,6 @@ The data, as can be seen in figure \ref{fig:group1_graphics}, can be summarized 
 \item 62,5\% of the respondents work in medium to big companies (more than 50 workers), from which 41,7\% work in companies with more than 1000 people and 12,5\% in companies with between 200 and 1000 people.
 \end{itemize}
 
+\subsection*{Conclusions from Group 1}
+
 From this data, we can ascertain the general profile of the survey respondents. These are people who, in their majority, work in big companies related to the supply chain, in the various fields, but mostly in transport, logistics and health. The respondents, though they may have had education in this area, do not show a high number of years of experience, with most of them having only up until 5 years of experience.
