--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -97,7 +97,7 @@ chain can be efficiently achieved
 with the present processes and
 technologies (excluding blockchain).
 \item A private blockchain, operated by a group
-of companies can be agood alternative to 
+of companies can be a good alternative to 
 the cloud in terms of information security,
 since the information is hosted by these
 companies
@@ -146,3 +146,6 @@ systems, this is a good trade-of.
       \caption{Blockchain expectation for adoption in supply chain and impact of GDPR on this application.}
     \label{fig:group4_graphics}
 \end{figure}
+
+
+\subsection*{Conclusions from Group 4}
