--- a/survey/surveyconclusion.tex
+++ b/survey/surveyconclusion.tex
@@ -2,6 +2,16 @@
 \section{Conclusions}
 Extract from the answers in the results a relevant conclusion, to be used in the following chapter.
 
-Rank issues.
-Rank points of improvement.
-Rank features to be implemented.
+From group 1, we concluded...
+
+From group 2, we concluded...
+
+From group 3, we concluded...
+
+From group 4:
+
+Rank points of improvement?
+
+Rank features to be implemented?
+
+We concluded also...
