Comments to the survey chapter

--- a/survey/survey3.tex
+++ b/survey/survey3.tex
@@ -21,6 +21,8 @@ They were also given some affirmations to classify their agreement with.
 
 The data collected from these questions and affirmations can be found in figure \ref{group3_graphics}. The data from the affirmations was also
 
+\todo{fcorreia: was also... }
+
 \begin{figure}[h]
     %\makebox[2pt]{}
 
