--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -12,6 +12,8 @@
  
 (Placeholder image. Should i divide it in more images?)
 
+\todo{fcorreia: sim, está muito pequeno para se ler assim. talvez quatro ou cinco destes gráficos lado a lado fiquem ok...}
+
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.35]{media/importance_SC_improvement_points.png}
