Initial comments to the Prototype chapter

--- a/prototype.tex
+++ b/prototype.tex
@@ -17,6 +17,7 @@
 
 LISTAR REQUISITOS AQUI. DIVIDIR COMO NO VOLERE TEMPLATE? TIRAR O QUE NAO INTERESSA OU MUDAR DE SITIO
 
+\todo{fcorreia: não te restrinjas ao template da Volere. isto podia ser tão simples quanto uma lista de user-stories.
 
 
 \subsection{Project Drivers}
